--- a/trunk/site/war/index.html
+++ b/trunk/site/war/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <link rel="stylesheet" type="text/css" href="/css/yaw.css" />
-    <title>Yaw Tecnologia - Treinamentos e Consultoria</title>
+    <title>YaW Tecnologia - Treinamentos e Consultoria</title>
     
   </head>
 
@@ -93,14 +93,14 @@
       	    <span>Minicursos Gratuitos</span>
       	    <br/><br/>
       	    <ul>
-      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2227&hashAlt=C3C4B6C7A1C78549137B2B8B162F9E7A" target="_blank">Introdu&ccedil;&atilde;o a Plataforma Java</a></li>
-      	      <li class="dia">11&#47;Jan&#47;2010</li>
+      	      <li><a href="http://www.globalcode.com.br/site/gratuitos/minicurso.seam?id=385" target="_blank">Sintaxe da Linguagem Java e Orienta&ccedil;&atilde;o a Objetos</a></li>
+      	      <li class="dia">26&#47;Jan&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
       	    </ul>
       	    <br/>
       	    <ul>
-      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2228&hashAlt=B8908BCA569655449BE2D41E567BC982" target="_blank">Introdu&ccedil;&atilde;o a Desenvolvimento Web com Java</a></li>
-      	      <li class="dia">14&#47;Jan&#47;2010</li>
+      	      <li><a href="http://www.globalcode.com.br/site/gratuitos/minicurso.seam?id=415" target="_blank">Java e Banco de Dados: JDBC, Hibernate, JPA e EJB 3 </a></li>
+      	      <li class="dia">28&#47;Jan&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
       	    </ul>
       	  </div>
