--- a/site/war/index.html
+++ b/site/war/index.html
@@ -93,13 +93,13 @@
       	    <span>Minicursos Gratuitos</span>
       	    <br/><br/>
       	    <ul>
-      	      <li><a href="http://www.globalcode.com.br/site/gratuitos/minicurso.seam?id=385" target="_blank">Sintaxe da Linguagem Java e Orienta&ccedil;&atilde;o a Objetos</a></li>
+      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2260&hashAlt=030E78F47335A83472940A4769B26AFA" target="_blank">Sintaxe da Linguagem Java e Orienta&ccedil;&atilde;o a Objetos</a></li>
       	      <li class="dia">26&#47;Jan&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
       	    </ul>
       	    <br/>
       	    <ul>
-      	      <li><a href="http://www.globalcode.com.br/site/gratuitos/minicurso.seam?id=415" target="_blank">Java e Banco de Dados: JDBC, Hibernate, JPA e EJB 3 </a></li>
+      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2261&hashAlt=77FB510572954DDFFC7B40829602F06B" target="_blank">Java e Banco de Dados: JDBC, Hibernate, JPA e EJB 3 </a></li>
       	      <li class="dia">28&#47;Jan&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
       	    </ul>
