--- a/site/war/index.html
+++ b/site/war/index.html
@@ -81,7 +81,7 @@
       	    	</tr>
       	    	<tr>
       	    	  <td><img src="/images/logo_ac_programador.png" style="margin: 15px 3px;" alt="Promo&ccedil;&atilde;o Universit&aacute;rios" title="Promo&ccedil;&atilde;o Universit&aacute;rios" align="left"/></td>
-      	    	  <td><p>Em breve! <b>Academia Programador</b> o Treinamento ideal para quem busca ingressar em desenvovilmento de software.</p></td>
+      	    	  <td><p>Em breve! <b>Academia Programador</b> o Treinamento ideal para quem busca ingressar em desenvolvimento de software.</p></td>
       	    	</tr>
       	    </table>
       	    <br/><a href="/treinamentos/promocoes.html">Mais detalhes aqui.</a>
