--- a/trunk/site/war/treinamentos/promocoes.html
+++ b/trunk/site/war/treinamentos/promocoes.html
@@ -44,17 +44,11 @@
       </div>
       
 	  <div id="sidebar">
-	    <div id="agendaTurmas2">
+	  	<div id="agendaTurmas2">
       	  <div>
       	    <br/>
       	    <span>Pr&oacute;ximas turmas</span>
       	    <br/><br/>
-      	    <ul>
-      	      <li><a href="/treinamentos/intensivoAcademiaJava.html">Intensivo Academia Java</a></li>
-      	      <li class="dia">18&#47;Jan&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma IAJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
-      	      <li>Segunda a sexta das 19 &aacute;s 23 h</li>
-      	    </ul>
-      	    <br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
       	      <li class="dia">30&#47;Jan&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
@@ -65,6 +59,18 @@
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
       	      <li class="dia">23&#47;Fev&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Ter&ccedil;a e Quinta das 19 &aacute;s 23 h</li>
+      	    </ul>
+      	    <br/>
+      	    <ul>
+      	      <li><a href="/treinamentos/handsonJPA.html">Hands-on JPA</a></li>
+      	      <li class="dia">22&#47;Fev&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma JPAT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
+      	    </ul>
+      	    <br/>
+      	    <ul>
+      	      <li><a href="/treinamentos//academiaWeb.html">Academia Web Developer</a></li>
+      	      <li class="dia">29&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
       	    </ul>
       	  </div>
       	</div>
