--- a/trunk/centraldesign/war/index.html
+++ b/trunk/centraldesign/war/index.html
@@ -12,6 +12,8 @@
 </tr>
 <tr>
 <td><a href="/member/login" />Login</td>
+<td><a href="/member/list" />Listagem</td>
+<td><a href="/member/addUser" />AddUser</td>
 </tr>
 </table>
 </body>
