--- a/trunk/site/war/treinamentos/academiaJava.html
+++ b/trunk/site/war/treinamentos/academiaJava.html
@@ -81,7 +81,7 @@
       	    <br/><br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
-      	      <li class="dia">30&#47;Jan&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li class="dia">20&#47;Fev&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>S&aacute;bado das 10 &aacute;s 19 h</li>
       	    </ul>
       	    <br/>
