--- a/site/war/index.html
+++ b/site/war/index.html
@@ -47,7 +47,7 @@
       	    <br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
-      	      <li class="dia">30&#47;Jan&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li class="dia">20&#47;Fev&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>S&aacute;bado das 10 &aacute;s 19 h</li>
       	    </ul>
       	    <br/>
@@ -100,15 +100,15 @@
       	    <br/><br/>
       	    <ul>
       	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2260&hashAlt=030E78F47335A83472940A4769B26AFA" target="_blank">Sintaxe da Linguagem Java e Orienta&ccedil;&atilde;o a Objetos</a></li>
-      	      <li class="dia">26&#47;Jan&#47;2010</li>
+      	      <li class="dia">04&#47;Fev&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
       	    </ul>
       	    <br/>
-      	    <ul>
+      	    <!--<ul>
       	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2261&hashAlt=77FB510572954DDFFC7B40829602F06B" target="_blank">Java e Banco de Dados: JDBC, Hibernate, JPA e EJB 3 </a></li>
       	      <li class="dia">28&#47;Jan&#47;2010</li>
       	      <li>19:30 &aacute;s 22:30 h</li>
-      	    </ul>
+      	    </ul>-->
       	  </div>
       	</div>
       </div>
