--- a/centraldesign/war/index.html
+++ b/centraldesign/war/index.html
@@ -14,6 +14,7 @@
 <td><a href="/member/login" />Login</td>
 <td><a href="/member/list" />Listagem</td>
 <td><a href="/member/addUser" />AddUser</td>
+<td><a href="/upload.jsp" />Upload</td>
 </tr>
 </table>
 </body>
