--- a/centraldesign/war/index.html
+++ b/centraldesign/war/index.html
@@ -11,10 +11,10 @@
 <td colspan="2" style="font-weight: bold;">Opções:</td>
 </tr>
 <tr>
-<td><a href="/member/login" />Login</td>
-<td><a href="/member/list" />Listagem</td>
-<td><a href="/member/addUser" />AddUser</td>
-<td><a href="/upload.jsp" />Upload</td>
+<td><a href="/struts/login" />Login</td>
+<td><a href="/struts/list" />Listagem</td>
+<td><a href="/struts/addUser" />AddUser</td>
+<td><a href="/struts/upFile" />Upload</td>
 </tr>
 </table>
 </body>
