--- a/centraldesign/war/index.html
+++ b/centraldesign/war/index.html
@@ -14,6 +14,7 @@
 <td><a href="/struts/login" />Login</td>
 <td><a href="/struts/list" />Listagem</td>
 <td><a href="/struts/addUser" />AddUser</td>
+<td><a href="/struts/editUser" />Edit User</td>
 <td><a href="/struts/upFile" />Upload</td>
 </tr>
 </table>
