Ajustes nas datas de minicursos de marco e na 1a. turma do AP.

--- a/site/war/index.html
+++ b/site/war/index.html
@@ -44,19 +44,22 @@
       	  <div>
       	    <br/>
       	    <span>Pr&oacute;ximas turmas</span>
-      	    <br/>
+      	    <br/><br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
       	      <li class="dia">16&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Ter&ccedil;a e Quinta das 19 &aacute;s 23 h</li>
       	    </ul>
-      	    <br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaWeb.html">Academia Web Developer</a></li>
       	      <li class="dia">29&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
       	    </ul>
-      	    <br/>
+      	    <ul>
+      	      <li><a href="/treinamentos/academiaProgramador.html">Academia do Programador</a></li>
+      	      <li class="dia">12&#47;Abr&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma APTABC01" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
+      	    </ul>
       	    <ul>
       	      <li><a href="/treinamentos/handsonJPA.html">Hands-on JPA</a></li>
       	      <li class="dia">26&#47;Abr&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma JPAT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
@@ -72,19 +75,17 @@
       	    <br/>
       	    <table>
       	    	<tr>
-      	    	  <td><div id="promocao">12&#37;</div></td>
-      	    	  <td><p><b>Promo&ccedil;&atilde;o Lan&ccedil;amento</b>: 12% de desconto em todos os treinamentos</p></td>
-      	    	</tr>
-      	    	<tr>
       	    	  <td><img src="/images/promocao_universitarios.png" style="margin: 15px 3px;" alt="Promo&ccedil;&atilde;o Universit&aacute;rios" title="Promo&ccedil;&atilde;o Universit&aacute;rios" align="left"/></td>
       	    	  <td><p><b>Promo&ccedil;&atilde;o Universit&aacute;rios</b>: 25% de desconto na carreira Academia Java, Intensivo Academia e Academia Web. </p></td>
       	    	</tr>
       	    	<tr>
       	    	  <td><img src="/images/logo_ac_programador.png" style="margin: 15px 3px;" alt="Promo&ccedil;&atilde;o Universit&aacute;rios" title="Promo&ccedil;&atilde;o Universit&aacute;rios" align="left"/></td>
-      	    	  <td><p>Em breve! <b>Academia Programador</b> o Treinamento ideal para quem busca ingressar em desenvolvimento de software.</p></td>
+      	    	  <td><p>Como aprender a programar? <b>Academia Programador</b> o Treinamento ideal para quem busca ingressar em desenvolvimento de software.</p></td>
       	    	</tr>
       	    </table>
-      	    <br/><a href="/treinamentos/promocoes.html">Mais detalhes aqui.</a>
+      	    <br/>
+      	    <h5>Promo&ccedil;&atilde;o especial para quem se matricular na primeira turma da Academia do Programador!</h5>
+      	    <a href="/treinamentos/promocoes.html">Mais detalhes aqui.</a>
       	  </div>
       	</div>
       	<div id="agendaMiniCursos">
@@ -92,7 +93,22 @@
       	    <br/>
       	    <span>Minicursos Gratuitos</span>
       	    <br/><br/>
-      	    <b>Em breve!</b>
+      	    <ul>
+      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2708&hashAlt=50CB746B653818EC08D2CB4745DCF517" target="_blank">Introdu&ccedil;&atilde;o a Desenv. Web com Java</a></li>
+      	      <li class="dia">04&#47;Marc&#47;2010</li>
+      	      <li>19:30 &aacute;s 22:00 h</li>
+      	    </ul>
+      	    <ul>
+      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2709&hashAlt=04A5B4CAA07B8C0D257F6EBC53FC914E" target="_blank">Adobe Flex 3</a></li>
+      	      <li class="dia">16&#47;Marc&#47;2010</li>
+      	      <li>19:30 &aacute;s 22:00 h</li>
+      	    </ul>
+      	    <ul>
+      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2710&hashAlt=2874B271224A4028CCB545A9B4AA48D8" target="_blank">Desenv. aplicativo com JSF, Facelets, Hibernate, AJAX e Design Patterns</a></li>
+      	      <li class="dia">22&#47;Marc&#47;2010</li>
+      	      <li>19:30 &aacute;s 22:00 h</li>
+      	    </ul>
+      	    <br/>
       	  </div>
       	</div>
       </div>
