--- a/trunk/site/war/treinamentos/academiaJava.html
+++ b/trunk/site/war/treinamentos/academiaJava.html
@@ -18,7 +18,7 @@
         <img src="/images/logo_ac_java.png" style="margin: 0pt 5px;" alt="Logo Academia Java" title="Carreira Academia Java" align="left"/>
         <br/>
         <br/>
-        <h2>A Carreira Academia Java</h2><br/>
+        <h2>Academia Java</h2><br/>
         <span class="boldTitle">O curso de Java  mais completo do mercado</span>
         <br/><br/>
         
@@ -78,7 +78,7 @@
       	  <div>
       	    <br/>
       	    <span>Pr&oacute;ximas turmas</span>
-      	    <br/>
+      	    <br/><br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
       	      <li class="dia">16&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
@@ -88,6 +88,12 @@
       	    <ul>
       	      <li><a href="/treinamentos/academiaWeb.html">Academia Web Developer</a></li>
       	      <li class="dia">29&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
+      	    </ul>
+      	    <br/>
+      	    <ul>
+      	      <li><a href="/treinamentos/academiaProgramador.html">Academia do Programador</a></li>
+      	      <li class="dia">12&#47;Abr&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma APTABC01" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
       	    </ul>
       	    <br/>
