--- a/trunk/site/war/treinamentos/promocoes.html
+++ b/trunk/site/war/treinamentos/promocoes.html
@@ -17,24 +17,26 @@
       <div id="content">
         <h2>Promo&ccedil;&otilde;es</h2>
         <br/>
-        <div id="promocao">12&#37; de Desconto em Todas as Turmas</div>
-        <p>Promo&ccedil;&atilde;o de Lan&ccedil;amento, 12% de desconto para todas as Turmas em todos treinamentos.</p>
-        <span>Regulamento</span>
-      	<ul>
-      		<li>N&atilde;o acumulativa com outras promo&ccedil;&otilde;es.</li>
-      		<li>12% de desconto  para pagamentos em at&eacute; 4x.</li>
-      	</ul>
-        <br/><hr/><br/>
-      	<div id="promocao">
-      	  <img src="/images/promocao_universitarios.png" style="margin: 15px 3px;" alt="Promo&ccedil;&atilde;o Universit&aacute;rios" title="Promo&ccedil;&atilde;o Universit&aacute;rios" />
-      	</div>
-      	<p>25% de desconto na carreira Academia Java, Intensivo Academia e Academia Web.</p>
-      	<span>Regulamento</span>
+        <div id="promocao"><img src="/images/promocao_universitarios.png" style="margin: 15px 3px;" alt="Promo&ccedil;&atilde;o Universit&aacute;rios" title="Promo&ccedil;&atilde;o Universit&aacute;rios" /></div>
+        <p>25% de desconto na carreira Academia Java, Intensivo Academia e Academia Web.</p>
+        <span>Regulamento</span><br/><br/>
       	<ul>
       	  <li>Promo&ccedil;&atilde;o válida apenas para as turmas publicadas nesta página.</li>
       	  <li>Obrigatório apresenta&ccedil;&atilde;o do RA no ato da matrícula.</li>
       	  <li>N&atilde;o cumulativa com outras promo&ccedil;&otilde;es.</li>
       	  <li>25% de desconto  para pagamentos em at&eacute; 4x.</li>
+      	</ul>
+        <br/><hr/><br/>
+      	<div id="promocao">
+      	  Primeira turma da Academia do Programador
+      	</div>
+      	<p>Desconto que começa com 20% e vai diminuindo no decorrer dos dias</p>
+      	<span>Regulamento</span><br/><br/>
+      	<ul>
+      	  <li>Quem se matrícular entre os dia 24 a 28 de Fevereiro terá o Desconto de 20%</li>
+      	  <li>Quem se matrícular no dia de 1 de Março terá o Desconto de 19%</li>
+      	  <li>Quem se matrícular no dia de 10 de Março terá o Desconto de 10%</li>
+      	  <li>Quem se matrícular entre os dia 15 e 20 de Março terá o Desconto de 5%</li>
       	</ul>
       	
       	<br/>
@@ -48,7 +50,7 @@
       	  <div>
       	    <br/>
       	    <span>Pr&oacute;ximas turmas</span>
-      	    <br/>
+      	    <br/><br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
       	      <li class="dia">16&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJTABC02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
@@ -58,6 +60,12 @@
       	    <ul>
       	      <li><a href="/treinamentos/academiaWeb.html">Academia Web Developer</a></li>
       	      <li class="dia">29&#47;Mar&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
+      	    </ul>
+      	    <br/>
+      	    <ul>
+      	      <li><a href="/treinamentos/academiaProgramador.html">Academia do Programador</a></li>
+      	      <li class="dia">12&#47;Abr&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma APTABC01" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
       	    </ul>
       	    <br/>
