Ajustes nos titulos, e retirada de acentos na tela de AP e um pouco do AN.

--- a/site/war/index.html
+++ b/site/war/index.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
+<ß?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <link rel="stylesheet" type="text/css" href="/css/yaw.css" />
-    <title>YaW Tecnologia - Treinamentos e Consultoria</title>
+    <title>YaW Tecnologia - Cursos Java e Programa&ccedil;&atilde;o / Pesquisa / Consultoria</title>
     
   </head>
 
