--- a/site/war/treinamentos/coreEJB.html
+++ b/site/war/treinamentos/coreEJB.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <link rel="stylesheet" type="text/css" href="/css/yaw.css" />
+    <title>YaW Tecnologia - Curso Enterprise JavaBeans</title>
   </head>
 
   <body>
