--- a/site/war/treinamentos/intensivoAcademiaJava.html
+++ b/site/war/treinamentos/intensivoAcademiaJava.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     
     <link rel="stylesheet" type="text/css" href="/css/yaw.css" />
+    <title>YaW Tecnologia - Curso Java Intensivo de F&eacute;rias</title>
   </head>
 
   <body>
