Atualizacoes de minicurso e promocoes

--- a/site/war/index.html
+++ b/site/war/index.html
@@ -84,7 +84,7 @@
       	    	      <p>L&oacute;gica de Programa&ccedil;&atilde;o, Banco de Dados, Sist. Operacional, Web, Rob&oacute;tica e mais.</p></td>
       	    	</tr>
       	    	<tr>
-      	    		<td colspan="2">Promo&ccedil;&atilde;o especial para primeira turma, <a href="/treinamentos/promocoes.html">veja.</a></td>
+      	    		<td colspan="2">Promo&ccedil;&atilde;o especial para primeira turma: <b>10% de Desconto</b>!</td>
       	    	</tr>
       	    </table>
       	  </div>
@@ -95,9 +95,6 @@
       	    <span>Minicursos Gratuitos</span>
       	    <br/><br/>
       	    <ul>
-      	      <li><a href="http://www.globalcode.com.br/minicurso/index.jsp?mc=2710&hashAlt=2874B271224A4028CCB545A9B4AA48D8" target="_blank">Desenv. aplicativo com JSF, Facelets, Hibernate, AJAX e Design Patterns</a></li>
-      	      <li class="dia">31&#47;Mar&#47;2010</li>
-      	      <li>19:30 &aacute;s 22:00 h</li>
       	    </ul>
       	    <br/>
       	  </div>
