--- a/site/war/treinamentos/promocoes.html
+++ b/site/war/treinamentos/promocoes.html
@@ -31,15 +31,7 @@
       	<div id="promocao">
       	  Primeira turma da Academia do Programador
       	</div>
-      	<p>Desconto que começa com 20% e vai diminuindo no decorrer dos dias</p>
-      	<span>Regulamento</span><br/><br/>
-      	<ul>
-      	  <li>Quem se matrícular entre os dia 24 a 28 de Fevereiro terá o Desconto de 20%</li>
-      	  <li>Quem se matrícular no dia de 1 de Março terá o Desconto de 19%</li>
-      	  <li>Quem se matrícular no dia de 10 de Março terá o Desconto de 10%</li>
-      	  <li>Quem se matrícular entre os dia 15 e 20 de Março terá o Desconto de 5%</li>
-      	</ul>
-      	
+      	<p>Desconto de 10% no valor do curso.</p>      	
       	<br/>
       	<br/>
       	
