--- a/cdesign/src/cdesign/app/pages/user_portfolio.html
+++ b/cdesign/src/cdesign/app/pages/user_portfolio.html
@@ -8,7 +8,10 @@
 	 	<input type="hidden" name="id_user" value="{{id_user}}">
 	 	<div class="field">
             <label for="id_file">Arquivo:</label>
-            {{ form.file }}
+             <input type="file" name="file1" id="id_file1" />
+             <input type="file" name="file2" id="id_file2" /> 
+             <input type="file" name="file3" id="id_file3" /> 
+             <input type="file" name="file4" id="id_file4" />  
         </div>
         <div class="field">
             <label for="id_desc">Description:</label>
