--- a/trunk/cdesign/src/cdesign/app/pages/user_profile.html
+++ b/trunk/cdesign/src/cdesign/app/pages/user_profile.html
@@ -4,5 +4,8 @@
 </head>
 <body>
      <h1>{{user.name}}</h1>
+     {%for img in user_images%}
+     	<img src="http://localhost:8000/infra/photo/PEQ_{{img}}"><br/>
+     {%endfor%}
 </body>
 </html>
