novo calendario, mudanca das turmas de maio para junho

--- a/site/war/treinamentos/academiaWeb.html
+++ b/site/war/treinamentos/academiaWeb.html
@@ -79,13 +79,13 @@
       	    <br/><br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaWeb.html"><b>Nova</b> Academia Web Developer</a></li>
-      	      <li class="dia">08&#47;Mai&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li class="dia">12&#47;Jun&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>S&aacute;bado <i>Light</i> das 10 &aacute;s 17 h</li>
       	    </ul>
       	    <br/>
       	    <ul>
       	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
-      	      <li class="dia">10&#47;Mai&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJABCT03" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li class="dia">14&#47;Jun&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJABCT03" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
       	    </ul>
       	    <br/>
