correcao da data do intensivo

--- a/site/war/index.html
+++ b/site/war/index.html
@@ -28,13 +28,13 @@
       	        <td>
       	          <div>
       	            <p>Em parceria com a <a href="http://www.globalcode.com.br/index.html" target="open">Globalcode</a> a <b>Yaw</b> traz para o Grande ABC e regi&atilde;o os melhores treinamentos Java do mercado.</p>
-      	            <p>Consagradas carreiras como: Academia Java, Academia Web e Academia Enterprise. Catálogo completo de cursos Java.</p>
+      	            <p>Consagradas carreiras como: Academia Java, Academia Web e Academia Enterprise. <a href="treinamentos/treinamentos.html">Catálogo completo de cursos Java.</a></p>
       	          </div>
       	        </td>
       	      </tr>
       	      <tr>
-      	        <td><a href="/treinamentos/intensivoAcademiaJava.html" target="open"><img src="/images/logo_ac_java_v_m.png" style="margin: 0pt 12px;" alt="IntensivoAcademiaJava" title="Curso de Férias" align="left"/></a></td>
-      	        <td><p>Durante o mês de Julho, a YaW disponibiliza uma turma do <a href="/treinamentos/intensivoAcademiaJava.html" target="open">Intensivo Academia Java</a>, ideial para quem prentende aprender Java durante as férias! Com ótimas condições para quem é universitário, consulte.</p></td>
+      	        <td><a href="/treinamentos/intensivoAcademiaJava.html"><img src="/images/logo_ac_java_v_m.png" style="margin: 0pt 12px;" alt="IntensivoAcademiaJava" title="Curso de Férias" align="left"/></a></td>
+      	        <td><p><b>Curso de Java durante as férias de Julho</b>, disponibilizamos uma turma do <a href="/treinamentos/intensivoAcademiaJava.html" target="open">Intensivo Academia Java</a>, perfeito para profissionais e estudantes com pouca disponibilidade de tempo. <b>Aprenda Java nas férias!</b></p></td>
       	      </tr>
       	      
       	    </table>
@@ -60,7 +60,7 @@
       	    <br/>
       	    <ul>
       	      <li><a href="/treinamentos/intensivoAcademiaJava.html">Intensivo Academia Java</a></li>
-      	      <li class="dia">29&#47;Jun&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma IAJABCT02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li class="dia">28&#47;Jun&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma IAJABCT02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>Segunda a Quinta das 19 &aacute;s 23 h</li>
       	    </ul>
       	    <ul>
