--- a/site/war/curso/orientacaoObjetos.html
+++ b/site/war/curso/orientacaoObjetos.html
@@ -54,7 +54,7 @@
 	    </ul>
 	    
 	    <img alt="YaW Tecnologia - Compartilhando conhecimento" src="/images/yaw.png"/>
-	    <a class="profissao" href="http://www.profissaojava.com.br" target="_blank" style="text-decoration:none;" ><img src="http://www.profissaojava.com.br/img/banners/banner_profissao_java_780x80.png" style="border:none; width: 700px;" title=" Profissão Java 2010, um evento organizado pela Globalcode" alt=" Profissão Java 2010, um evento organizado pela Globalcode" /></a>
+	    <a class="tdc" href="http://www.thedevelopersconference.com.br/" target="_blank" style="text-decoration:none;" ><img src="/images/barra-top-basic.jpg" style="border:none; width: 650px;height: 90px;" title="The Developers Conference, um evento organizado pela Globalcode" alt="The Developers Conference, um evento organizado pela Globalcode" /></a>
 	  </div>
 	  
 	  <div id="sidebar">
@@ -64,27 +64,15 @@
       	    <span>Pr&oacute;ximas turmas</span>
       	    <br/><br/>
       	    <ul>
-      	      <li><a href="/treinamentos/intensivoAcademiaJava.html">Intensivo Academia Java</a></li>
-      	      <li class="dia">28&#47;Jun&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma IAJABCT02" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
-      	      <li>Segunda a Quinta das 19 &aacute;s 23 h</li>
-      	    </ul>
-      	    <br/>
-      	    <ul>
-      	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
-      	      <li class="dia">07&#47;Jul&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJABCT03" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
-      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
-      	    </ul>
-      	    <br/>
-      	    <ul>
       	      <li><a href="/treinamentos/academiaWeb.html"><b>Nova</b> Academia Web Developer</a></li>
       	      <li class="dia">31&#47;Jul&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AWT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
       	      <li>S&aacute;bado <i>Light</i> das 10 &aacute;s 17 h</li>
       	    </ul>
       	    <br/>
       	    <ul>
-      	      <li><a href="/treinamentos/handsonJPA.html">Hands-on JPA</a></li>
-      	      <li class="dia">16&#47;Ago&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma JPAT1ABC" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
-      	      <li>Segunda e Quarta das 19 &aacute;s 23 h</li>
+      	      <li><a href="/treinamentos/academiaJava.html">Academia Java</a></li>
+      	      <li class="dia">28&#47;Ago&#47;2010 &#45; <a href="mailto:abc@globalcode.com.br?subject=Solicitacao de pre-matricula na turma AJABCT04" title="clique para solicitar pr&eacute;&#45;matr&#105;cula por e&#45;mail" target="_blank">Pr&eacute;&#45;Matr&#105;cula</a></li>
+      	      <li>S&aacute;bado das 10 &aacute;s 29 h</li>
       	    </ul>
       	  </div>
       	</div>
