--- a/site/war/sobre/sobre.html
+++ b/site/war/sobre/sobre.html
@@ -33,7 +33,7 @@
 	    </ul>
 	    
 	    <img alt="YaW Tecnologia - Compartilhando conhecimento" src="/images/yaw.png"/>
-	    <a class="profissao" href="http://www.profissaojava.com.br" target="_blank" style="text-decoration:none;" ><img src="http://www.profissaojava.com.br/img/banners/banner_profissao_java_780x80.png" style="border:none; width: 700px;" title=" Profissão Java 2010, um evento organizado pela Globalcode" alt=" Profissão Java 2010, um evento organizado pela Globalcode" /></a>
+	    <a class="tdc" href="http://www.thedevelopersconference.com.br/" target="_blank" style="text-decoration:none;" ><img src="/images/barra-top-basic.jpg" style="border:none; width: 650px;height: 90px;" title="The Developers Conference, um evento organizado pela Globalcode" alt="The Developers Conference, um evento organizado pela Globalcode" /></a>
 	  </div>
 	  
 	  	<div id="sidebar">
@@ -49,6 +49,7 @@
 				  <a href="mailto:rafael@yaw.com.br?subject=Contato Yaw" target="_blank"><img src="/images/mail.jpg" alt="e&#45;mail Rafael" title="e&#45;mail Rafael"/></a>
 				  <a href="http://br.linkedin.com/pub/rafael-nunes/11/166/434" target="open"><img src="/images/linkedin.jpg" alt="LinkedIn Rafael" title="LinkedIn Rafael"/></a>
 				  <a href="http://twitter.com/rafanunes" target="open"><img src="/images/twitter.png" alt="Twitter Rafael" title="Twitter Rafael"/></a>
+				  <a href="http://blog.globalcode.com.br/search/label/Rafael" target="open"><img src="/images/blogger.jpg" alt="Blog Rafael" title="Blog Rafael"/></a>
 				</div>
 				<br/>
 				<div id="time">
@@ -58,6 +59,7 @@
 				  <a href="mailto:eder@yaw.com.br?subject=Contato Yaw" target="_blank"><img src="/images/mail.jpg" alt="e&#45;mail Eder" title="e&#45;mail Eder"/></a>
 				  <a href="http://www.linkedin.com/in/edermagalhaes" target="open"><img src="/images/linkedin.jpg" alt="LinkedIn Eder" title="LinkedIn Eder"/></a>
 				  <a href="http://twitter.com/edermag" target="open"><img src="/images/twitter.png" alt="Twitter Eder" title="Twitter Eder"/></a>
+				  <a href="http://blog.globalcode.com.br/search/label/Eder" target="open"><img src="/images/blogger.jpg" alt="Blog Rafael" title="Blog Rafael"/></a>
 				</div>
 			</div>
 		</div>
