inserid link para projetos Open Source

--- a/site/war/contato/contato.html
+++ b/site/war/contato/contato.html
@@ -41,7 +41,8 @@
 		  <li><a href="/sobre/sobre.html">Quem somos</a></li>
 		  <li><a href="/treinamentos/treinamentos.html">Treinamentos</a></li>
 		  <li><a href="/consultoria/consultoria.html">Consultoria</a></li>
-  		  <li class="last"><a href="/contato/contato.html">Contato</a></li>
+  		  <li><a href="/contato/contato.html">Contato</a></li>
+  		  <li class="last"><a href="/open/open.html">Open</a></li>
 	    </ul>
 	    <img alt="YaW Tecnologia - Compartilhando conhecimento" src="/images/yaw.png"/>
 	    <a class="tdc" href="http://www.thedevelopersconference.com.br/" target="_blank" style="text-decoration:none;" ><img src="/images/barra-top-basic.jpg" style="border:none; width: 650px;height: 90px;" title="The Developers Conference, um evento organizado pela Globalcode" alt="The Developers Conference, um evento organizado pela Globalcode" /></a>
